SOme customisation, branding testing

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ShareDrop</title>
-    <meta name="description" content="ShareDrop is a peer-to-peer file sharing app powered by HTML5 WebRTC.">
+    <title>FlyMyFile | Peer2Peer File Transfer</title>
+    <meta name="description" content="FlyMyFile is a PureJS Peer2Peer File Transfer app powered by WebRTC.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="mobile-web-app-capable" content="yes">
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="preloader"><span>Loading...</span></div>
+    <div class="preloader"><span>Getting ready to Fly Your File...</span></div>
 
     {{content-for 'body'}}
 
